[tool.poetry]
name = "repl_nix_JD-Backend-2022"
version = "0.1.0"
description = ""
authors = ["BevanShajan1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord-webhook = "^0.15.0"
mohawk = "^1.1.0"
termcolor = "^1.1.0"
requests = "2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
